--- a/.ci/docker/requirements-ci.txt
+++ b/.ci/docker/requirements-ci.txt
@@ -134,7 +134,7 @@ opt-einsum==3.3
 #Pinned versions: 3.3
 #test that import: test_linalg.py
 
-optree==0.11.0
+optree==0.11.0 ; python_version <= "3.12"
 #Description: A library for tree manipulation
 #Pinned versions: 0.11.0
 #test that import: test_vmap.py, test_aotdispatch.py, test_dynamic_shapes.py,
@@ -230,6 +230,7 @@ scikit-image==0.20.0 ; python_version >= "3.10" and python_version <= "3.12"
 
 scipy==1.10.1 ; python_version <= "3.11"
 scipy==1.12.0 ; python_version == "3.12"
+scipy>1.14 ; python_version == "3.13"
 # Pin SciPy because of failing distribution tests (see #60347)
 #Description: scientific python
 #Pinned versions: 1.10.1
@@ -258,7 +259,7 @@ typing-extensions
 #Pinned versions:
 #test that import:
 
-unittest-xml-reporting<=3.2.0,>=2.0.0
+unittest-xml-reporting<=3.2.0,>=2.0.0 ; python_version <= "3.12"
 #Description: saves unit test results to xml
 #Pinned versions:
 #test that import:
@@ -307,9 +308,8 @@ pywavelets==1.5.0 ; python_version == "3.12"
 #test that import:
 
 lxml==5.0.0 ; python_version <= "3.12"
-lxml==5.2.2 ; python_version == "3.13"
 #Description: This is a requirement of unittest-xml-reporting
 
 # Python-3.9 binaries
 
-PyGithub==2.3.0
+PyGithub==2.3.0 ; python_version <= "3.12"
